2012-11-02  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 6.0+beta3.

2012-11-02  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 6.0+beta2 release.

	* CHANGES: Updated.

2012-11-01  Michael Wiegand <michael.wiegand@greenbone.net>

	* INSTALL: Update reference system section.

2012-10-31  Matthew Mundell <matthew.mundell@greenbone.net>

	* omp/omp.c (omp_get_system_reports_ext): New function.

	* omp/omp.h (omp_get_system_reports_opts_t): New type.
	(omp_get_system_reports_opts_defaults): New variable.
	(omp_get_system_reports_ext): New function.

2012-10-26  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 6.0+beta2.

2012-10-26  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 6.0+beta1 release.

	* CHANGES: Updated.

2012-10-26  Michael Wiegand <michael.wiegand@greenbone.net>

	* INSTALL: Fix wrong module name in comment.

2012-10-26  Michael Wiegand <michael.wiegand@greenbone.net>

	* doc/Doxyfile.in: Set EXTRACT_ALL to YES for consistency across
	modules.

2012-10-26  Michael Wiegand <michael.wiegand@greenbone.net>

	Update "doc" and "doc-full" targets for out-of-source builds.

	* doc/CMakeLists.txt: Update commands and targets to work with
	out-of-source builds.

	* doc/Doxyfile.in: Updated to work with out-of-source builds.

	* doc/Doxyfile_full.in: Stripped trailing spaces, harmonized with
	Doxyfile.in.

2012-10-26  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Simplify usage of CMAKE_CURRENT_BINARY_DIR to
	CMAKE_BINARY_DIR since the two are identical in this context.

2012-10-26  Michael Wiegand <michael.wiegand@greenbone.net>

	* INSTALL: Update instructions to use out-of-source building, fix
	typo.

2012-10-26  Michael Wiegand <michael.wiegand@greenbone.net>

	* COPYING: Fix typo, update date.
