@@ -12,7 +12,8 @@
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License version 2,
-# as published by the Free Software Foundation
+# or, at your option, any later version as published by the Free
+# Software Foundation
 #
 # This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
